:rotating_light: Applied suggestions